Bug 208109 - Html export file name broken encoding
Summary: Html export file name broken encoding
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Parley Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-21 20:43 UTC by Ignacio Serantes
Modified: 2011-04-05 15:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ignacio Serantes 2009-09-21 20:43:18 UTC
Version:           0.9.2-svn (using 4.3.1 (KDE 4.3.1) "release 165", KDE:KDE4:Factory:Desktop / openSUSE_11.1)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.27.29-0.1-default

If your lesson file name has spanish characters, in my case "Japonés EOI", when you use export option (List or Flash Cards), file generated has broken encoding and can't be handle with dolphin or konqueror.

If name is in japanese "漢字" result name is "??.html" but encoding seems not to be broken because KDE 4 can handle it.

The five years support for legacy encoding of "Thiago Macieria" sounds now like a joke when even KDE 4.3.1 applications generate files with broken encoding that KDE 4 can't handle it.
Comment 1 Frederik Gladhorn 2011-04-05 15:29:51 UTC
Git commit de2f812158278fb16bb72df0e48bc4dbd000384f by Frederik Gladhorn.
Committed on 05/04/2011 at 15:21.
Pushed by gladhorn into branch 'master'.

Fix encoding for exported files.

Don't use latin1 but QFile::encodeName().

BUG: 208109
FIXED-IN: KDE 4.7

M  +2    -3    src/export/exportdialog.cpp     

http://commits.kde.org/parley/de2f812158278fb16bb72df0e48bc4dbd000384f