Fix encoding for exported files.

Don't use latin1 but QFile::encodeName().

BUG: 208109
FIXED-IN: KDE 4.7